--- a/INSTALL_Debian-stable_12-bookworm.org
+++ b/INSTALL_Debian-stable_12-bookworm.org
@@ -21,8 +21,8 @@ correspondantes.
 - [[#installer-debian][Installer Debian]]
   - [[#installer-le-système-complet][Installer le système complet]]
 - [[#configuration-du-système][Configuration du système]]
-  - [[#configuration-du-terminal--tilix][Configuration du terminal : Tilix]]
   - [[#ssh-et-git][SSH et git]]
+  - [[#configuration-du-terminal--tilix][Configuration du terminal : Tilix]]
   - [[#bios-dell][BIOS Dell]]
   - [[#batterie-swap-et-ram][Batterie, SWAP et RAM]]
 - [[#configurer-le-bureau][Configurer le bureau]]
@@ -35,6 +35,7 @@ correspondantes.
     - [[#firefox][Firefox]]
     - [[#navigateurs-alternatifs][Navigateurs alternatifs]]
     - [[#nextcloud][Nextcloud]]
+    - [[#zoom][Zoom]]
     - [[#gftp][GFTP]]
   - [[#bureautique][Bureautique]]
     - [[#polices][Polices]]
@@ -77,8 +78,8 @@ l'installation.
 
 ** Installer le système complet
 
-*L'installation complète prend environ 14 GB supplémentaires, pour un total de
-24 GB utilisés à la fin de la procédure.*
+*L'installation complète prend environ 15 GB supplémentaires, pour un total de
+25 GB utilisés à la fin de la procédure.*
 
 Il faut tout d'abord mettre à jour la liste des dépôts Debian pour y inclure
 notamment les firmware propriétaires (=non-free-firmware=) et les paquets
@@ -129,119 +130,35 @@ complet en une seule commande :
 sudo apt update
 sudo apt upgrade
 sudo apt install \
-    `# Terminal` tilix python3-nautilus powerline fonts-powerline most \
+    `# Terminal` tilix python3-nautilus powerline fonts-powerline most bash-completion \
     `# Utilitaires` cmake git gparted htop mlocate net-tools python3-pip rename sqlite3 fwupd tlp tlp-rdw localepurge flatpak gnome-software-plugin-flatpak \
-    `# GNOME` gnome-session gnome-icon-theme gnome-shell-extension-manager \
+    `# GNOME` gnome-session gnome-icon-theme gnome-shell-extension-manager gnome-shell-extension-appindicator \
     `# Web` chromium epiphany-browser torbrowser-launcher privoxy nextcloud-desktop nautilus-nextcloud \
     `# Utilitaires web` cifs-utils dnsutils gftp gvncviewer network-manager-openconnect-gnome network-manager-vpnc-gnome openfortivpn network-manager-fortisslvpn-gnome revelation rsync screen unison \
     `# Polices` fonts-arphic-ukai fonts-arphic-uming fonts-arphic-gkai00mp fonts-arphic-gbsn00lp fonts-arphic-bkai00mp fonts-arphic-bsmi00lp fonts-baekmuk fonts-bebas-neue fonts-crosextra-carlito fonts-crosextra-caladea fonts-ecolier-court fonts-ecolier-lignes-court fonts-firacode fonts-hack-ttf fonts-linuxlibertine ttf-mscorefonts-installer unifont \
     `# Emacs` emacs hunspell hunspell-en-gb hunspell-en-ca hunspell-en-us hunspell-fr libpoppler-glib-dev ditaa elpa-pdf-tools-server sqlformat \
-    `# Libre Office` libreoffice-style-sifr \
+    `# Libre Office` libreoffice-style-sifr/bookworm-backports \
     `# R` r-base r-base-core r-base-dev r-recommended littler r-cran-rjags r-cran-rjava r-cran-rodbc r-cran-tkrplot libgdal-dev libproj-dev libgeos-dev libnetcdf-dev libnode-dev libgsl-dev libgmp-dev libmpfr-dev libcurl4-openssl-dev libssl-dev libxml2-dev libcairo2-dev libxt-dev libmagick++-dev libudunits2-dev libharfbuzz-dev libfribidi-dev libgit2-dev tcl-dev tk-dev opencl-headers \
     `# QGIS` qgis \
     `# LaTex/PDF` texlive-full bibtex2html bookletimposer calibre gedit-latex-plugin gummi impressive ispell latex2rtf latexmk lcdf-typetools libtext-pdf-perl mupdf pdf2djvu pdf2svg pdfarranger pdfchain pdfsam pdftk poppler-utils qpdf xournal \
     `# Divers` homebank sweethome3d \
-    `# Codecs` flac frei0r-plugins gnome-video-effects-frei0r gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly libdvd-pkg vorbis-tools vorbisgain && sudo dpkg-reconfigure libdvd-pkg \
+    `# Codecs` flac frei0r-plugins gnome-video-effects-frei0r gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly libdvd-pkg vorbis-tools vorbisgain \
     `# Audio/video` audacity cuetools easytag ffmpeg shntool soundconverter devede gnome-mpv mkvtoolnix pitivi sound-juicer sox subtitleeditor vlc youtube-dl \
-    `# Images` gimp-gap gimp-gmic gimp-plugin-registry gimp-resynthesizer gthumb imagemagick inkscape \
+    `# Images` gimp-gmic gimp-plugin-registry gthumb imagemagick inkscape \
     `# Musique` lilypond frescobaldi \
     `# Jeux/loisirs` chromium-bsu dosbox marble stellarium
+sudo apt install \
+    `# Libre Office` -t bookworm-backports libreoffice-style-sifr
 #+end_src
 
-Ajout des logiciels Flatpak :
+Effectuer une mise-à-jour de nettoyage pour terminer, avec mise-à-jour de l'index de =locate= (pour recherche de fichiers en ligne de commande) et configuration pour la lecture des DVDs :
 
 #+begin_src sh
-  sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-  flatpak install flathub us.zoom.Zoom
-#+end_src
-
-Effectuer une mise-à-jour de nettoyage pour terminer :
-
-#+begin_src sh
-sudo apt update && sudo apt full-upgrade && sudo apt clean && sudo apt autoclean && sudo apt autoremove && flatpak update
+sudo apt update && sudo apt full-upgrade && sudo apt clean && sudo apt autoclean && sudo apt autoremove && sudo updatedb && sudo dpkg-reconfigure libdvd-pkg
 #+end_src
 
 
 * Configuration du système
-
-
-** Configuration du terminal : Tilix
-
-*Note :* Tilix nécessite =python3-nautilus= pour "Ouvrir Tilix ici" dans
-Nautilus.
-
-- Configuration du Bash :
-  #+begin_src sh
-    sudo ln -s /etc/profile.d/vte-2.91.sh /etc/profile.d/vte.sh
-    nano ~/.bashrc
-  #+end_src
-  - *Autocompletion :* vérifier que ces lignes sont décommentées :
-  #+begin_quote
-  : if ! shopt -oq posix; then
-  :   if [ -f /usr/share/bash-completion/bash_completion ]; then
-  :     . /usr/share/bash-completion/bash_completion
-  :   elif [ -f /etc/bash_completion ]; then
-  :     . /etc/bash_completion
-  :   fi
-  : fi
-  #+end_quote
-  - *Autres :* ajouter ces lignes à la fin du fichier :
-  #+begin_quote
-  : # Manpages with colors
-  : export MANPAGER="/usr/bin/most -s"
-  : 
-  : # Alias ls to have colors and directories before files 
-  : alias ls='ls --color=auto --group-directories-first'
-  : 
-  : # Alias upgrade & upgrade-full
-  : alias upgrade='sudo apt update && sudo apt upgrade && flatpak update'
-  : alias upgrade-full='sudo apt update && sudo apt full-upgrade && sudo apt clean && sudo apt autoclean && sudo apt autoremove && flatpak update'
-  : 
-  : # For Tilix and Powerline
-  : # https://gnunn1.github.io/tilix-web/manual/vteconfig/
-  : if [ $TILIX_ID ] || [ $VTE_VERSION ]; then
-  :         source /etc/profile.d/vte.sh
-  : fi
-  : if [ -f `which powerline-daemon` ]; then
-  :         powerline-daemon -q
-  :         POWERLINE_BASH_CONTINUATION=1
-  :         POWERLINE_BASH_SELECT=1
-  :         . /usr/share/powerline/bindings/bash/powerline.sh
-  : fi
-  #+end_quote
-- Configuration de Tilix (en particulier pour copier automatiquement le texte
-  sélectionné dans le presse-papier ; thème sombre ; pas de barre de titre pour
-  le mode Quake ; ~Ctrl+Shift+D~ pour ouvrir un terminal dessous ;
-  ~Ctrl+Shift+R~ pour ouvrir un terminal à droite) :
-  #+begin_src sh
-    gsettings set com.gexperts.Tilix.Settings unsafe-paste-alert false
-    gsettings set com.gexperts.Tilix.Settings copy-on-select true
-    gsettings set com.gexperts.Tilix.Settings terminal-title-style 'none'
-    gsettings set com.gexperts.Tilix.Settings theme-variant 'dark'
-    gsettings set com.gexperts.Tilix.Settings quake-hide-headerbar true
-    gsettings set com.gexperts.Tilix.Keybindings session-add-down '<Primary><Shift>d'
-    gsettings set com.gexperts.Tilix.Keybindings session-add-right '<Primary><Shift>r'
-  #+end_src
-  * Copier le thème Nord dans le bon dossier :
-  #+begin_src sh
-    sudo cp Tilix/nord-tilix/src/json/nord.json /usr/share/tilix/schemes/
-  #+end_src
-  * Configuration : Préférences > Profil > Par défaut :
-    * Général : « Bip » du terminal : Icône
-    * Couleur : Palette prédéfinies : Nord, et ajouter un peu de transparence
-  * Raccourcis clavier : dans les Paramètres Gnome > Clavier > Raccourcis clavier, ajouter
-    deux raccourcis personnalisés (en bas de la liste) :
-    * Tilix / =tilix= / ~Super+T~
-    * Tilix (Quake mode) / =tilix --quake= / ~`~ (au dessus de ~Tab~)
-  * Pour Tilix sous Wayland : Extension [[https://extensions.gnome.org/extension/1411/quake-mode/][quake-mode]].
-- Renvoyer des insultes quand on se trompe de mot de passe :
-  #+begin_src sh
-    sudo visudo
-  #+end_src
-  Ajouter cette ligne au début du fichier :
-  #+begin_quote
-  : Defaults        insults
-  #+end_quote
 
 
 ** SSH et git
@@ -275,11 +192,94 @@ Tester la connection à GitHub :
 
 Ne pas répondre immédiatement ; comparer la clé affichée avec celles disponibles
 [[https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/githubs-ssh-key-fingerprints][sur le site de GitHub]], récupérer celle qui semble correcte et la copier comme
-réponse. Si le shell renvoie : "Hi <login>! You've successfully authenticated,
+réponse à =fingerprint= (y compris le =SHA256:=). Si le shell renvoie : "Hi <login>! You've successfully authenticated,
 but GitHub does not provide shell access.", c'est que ça a fonctionné.
 
 Pour finir, on copie le fichier =.gitconfig= (du dossier Git) dans le dossier
-utilisateur. 
+utilisateur :
+
+#+begin_src sh
+  cp Git/.gitconfig ~/
+#+end_src
+
+
+** Configuration du terminal : Tilix
+
+*Note :* Tilix nécessite =python3-nautilus= pour "Ouvrir Tilix ici" dans
+Nautilus.
+
+- Configuration du Bash :
+  #+begin_src sh
+    sudo ln -s /etc/profile.d/vte-2.91.sh /etc/profile.d/vte.sh
+    nano ~/.bashrc
+  #+end_src
+  - *Autocompletion :* vérifier que ces lignes sont décommentées :
+  #+begin_quote
+  : if ! shopt -oq posix; then
+  :   if [ -f /usr/share/bash-completion/bash_completion ]; then
+  :     . /usr/share/bash-completion/bash_completion
+  :   elif [ -f /etc/bash_completion ]; then
+  :     . /etc/bash_completion
+  :   fi
+  : fi
+  #+end_quote
+  - *Autres :* ajouter ces lignes à la fin du fichier :
+  #+begin_quote
+  : # Manpages with colors
+  : export MANPAGER="/usr/bin/most -s"
+  : 
+  : # For Tilix and Powerline
+  : # https://gnunn1.github.io/tilix-web/manual/vteconfig/
+  : if [ $TILIX_ID ] || [ $VTE_VERSION ]; then
+  :         source /etc/profile.d/vte.sh
+  : fi
+  : if [ -f `which powerline-daemon` ]; then
+  :         powerline-daemon -q
+  :         POWERLINE_BASH_CONTINUATION=1
+  :         POWERLINE_BASH_SELECT=1
+  :         . /usr/share/powerline/bindings/bash/powerline.sh
+  : fi
+  : 
+  : # Alias ls to have colors and directories before files 
+  : alias ls='ls --color=auto --group-directories-first'
+  : 
+  : # Alias upgrade & upgrade-full
+  : alias upgrade='sudo apt update && sudo apt upgrade'
+  : alias upgrade-full='sudo apt update && sudo apt full-upgrade && sudo apt clean && sudo apt autoclean && sudo apt autoremove'
+  #+end_quote
+- Configuration de Tilix (en particulier pour copier automatiquement le texte
+  sélectionné dans le presse-papier ; thème sombre ; pas de barre de titre pour
+  le mode Quake ; ~Ctrl+Shift+D~ pour ouvrir un terminal dessous ;
+  ~Ctrl+Shift+R~ pour ouvrir un terminal à droite) :
+  #+begin_src sh
+    gsettings set com.gexperts.Tilix.Settings unsafe-paste-alert false
+    gsettings set com.gexperts.Tilix.Settings copy-on-select true
+    gsettings set com.gexperts.Tilix.Settings terminal-title-style 'none'
+    gsettings set com.gexperts.Tilix.Settings theme-variant 'dark'
+    gsettings set com.gexperts.Tilix.Settings quake-hide-headerbar true
+    gsettings set com.gexperts.Tilix.Keybindings session-add-down '<Primary><Shift>d'
+    gsettings set com.gexperts.Tilix.Keybindings session-add-right '<Primary><Shift>r'
+  #+end_src
+  * Installer le thème Nord :
+  #+begin_src sh
+    git clone git@github.com:nordtheme/tilix.git Tilix/Nord
+    cd Tilix/Nord/ && ./install.sh
+  #+end_src
+  * Configuration : Préférences > Profil > Par défaut :
+    * Général : « Bip » du terminal : Icône
+    * Couleur : Palette prédéfinies : Nord, et ajouter un peu de transparence (un cran vers la droite)
+  * Raccourcis clavier : dans les Paramètres Gnome > Clavier > Raccourcis clavier, ajouter
+    deux raccourcis personnalisés (en bas de la liste) :
+    * Tilix / =tilix= / ~Super+T~
+    * Tilix (Quake mode) / =env GDK_BACKEND=x11 tilix --quake= / ~²~ (au dessus de ~Tab~) ; attention, c'est un hack qui nécessite que Tilix ne soit pas déjà lancé en mode Wayland (mais les deux peuvent coexister). Pour quelque chose de plus propre, voir du côté de =[[https://github.com/gnunn1/tilix/issues/1314#issuecomment-1140504915][ddterm]]=
+- Renvoyer des insultes quand on se trompe de mot de passe :
+  #+begin_src sh
+    sudo visudo
+  #+end_src
+  Ajouter cette ligne au début du fichier :
+  #+begin_quote
+  : Defaults        insults
+  #+end_quote
 
 
 ** BIOS Dell
@@ -297,21 +297,23 @@ Dell fournit les mises-à-jour du BIOS via le Linux Vendor Firmware Service
   sudo fwupdmgr get-devices
   sudo fwupdmgr refresh
   sudo fwupdmgr get-updates
+#+end_src
+
+Et si besoin :
+
+#+begin_src sh
   sudo fwupdmgr update
 #+end_src
 
 Si la MAJ n'est pas possible (problème d'UEFI), on peut la faire à la main :
-- À la date du 2021/07/05, la dernière version disponible du BIOS est [[https://www.dell.com/support/home/fr-fr/drivers/driversdetails?driverid=4dkt5&oscode=biosa&productcode=xps-13-9350-laptop][1.13]]
-  (datée de 2020/10/06).
+- À la date du 26/10/2023, la dernière version disponible du BIOS est [[https://www.dell.com/support/home/fr-fr/product-support/product/precision-15-3581-laptop/drivers][1.4.1]]
+  (datée du 15/06/2023).
 - Après téléchargement, on vérifie les signatures :
-  #+begin_quote
-: md5sum XPS_9350_1.13.0.exe
-: a4baf26b7e21ec1d16232e529b01a13e  XPS_9350_1.13.0.exe
-: sha1sum XPS_9350_1.13.0.exe
-: 154934618915e1e5734adf2808473fc8a78feb45  XPS_9350_1.13.0.exe
-: sha256sum XPS_9350_1.13.0.exe
-: a085b7a0fa418db71ca3ba256e67e35129ae1a920e8cd9d45e57e51a27cbe80d  XPS_9350_1.13.0.exe
-  #+end_quote
+#+begin_src sh
+  md5sum Precision_3581_1.4.1.exe
+  sha1sum Precision_3581_1.4.1.exe
+  sha256sum Precision_3581_1.4.1.exe
+#+end_src
 - Copier le fichier sur une clé USB, redémarrer, appuyer sur =F12= pour avoir le
   menu de démarrage, sélectionner "BIOS Flash update" et suivre les
   instructions.
@@ -410,12 +412,12 @@ Si la MAJ n'est pas possible (problème d'UEFI), on peut la faire à la main :
 
 ** Clavier et internationalisation
 
-- Avoir français (Canada, France) et anglais (Canada, UK, US) dans la liste des
+- Avoir français (France) et anglais (UK, US) dans la liste des
   langues, en mettant le français comme langue par défaut :
   #+begin_src sh
     sudo dpkg-reconfigure locales
   #+end_src
-  Sélectionner =en-GB.UTF-8=, =en-US.UTF-8=, =fr-FR.UTF-8= (défaut).
+  Sélectionner =en-GB.UTF-8=, =en-US.UTF-8=, =fr-FR.UTF-8= (actif par défaut).
 - Enlever les langues qui ne sont plus nécessaires :
   #+begin_src sh
     sudo localepurge
@@ -438,10 +440,11 @@ Si la MAJ n'est pas possible (problème d'UEFI), on peut la faire à la main :
 
 ** Réglagles spécifiques du bureau
 
+- Vérifier les applications favorites : Fichiers, Firefox, Thunderbird, Zoom, Emacs, Libre Office, Moniteur système
 - Vérifier les applications par défaut (Paramètres > Applications par défaut),
   notamment Firefox, Thunderbird, VLC.
 - Vérifier les applications au démarrage avec =Ajustements= (Applications au
-  démarrage), notamment QOwnNotes, NextCloud et Fichiers.
+  démarrage), notamment Firefox, Thunderbird, Zoom, QOwnNotes, NextCloud et Fichiers.
 - Souris et pavé tactile : Activer =Taper pour cliquer= :
   #+begin_src sh
     gsettings set org.gnome.desktop.peripherals.touchpad tap-to-click true
@@ -452,20 +455,19 @@ Si la MAJ n'est pas possible (problème d'UEFI), on peut la faire à la main :
   - Désactiver « Masquer la fenêtre » :
   - Dossier personnel : ~Super+H~
   - Masquer toutes les fenêtres normales : ~Super+D~
-  - Enregistrer une capture d'écran dans Images : ~Super+P~
-  - Enregistrer la capture d'écran d'une fenêtre dans Images : ~Ctrl+Super+P~
-  - Enregistrer la capture d'une partie de l'écran dans Images : ~Shift+Ctrl+Super+P~
-  - Enregistrer une courte capture vidéo : ~Super+R~
+  - Effectuer une capture d'écran : ~Super+P~
+  - Effectuer la capture d'écran d'une fenêtre : ~Ctrl+Super+P~
+  - Enregistrer une capture vidéo interactivement : ~Super+R~
   - Verrouiller l'écran : ~Ctrl+Échap~
   - Basculer l'état d'agrandissement : ~Super+Return~
   #+begin_src sh
     gsettings set org.gnome.desktop.wm.keybindings minimize ['']
     gsettings set org.gnome.settings-daemon.plugins.media-keys home "['<Super>h']"
     gsettings set org.gnome.desktop.wm.keybindings show-desktop "['<Super>d']"
-    gsettings set org.gnome.shell.keybindings screenshot "['<Shift><Super>Print']"
-    gsettings set org.gnome.shell.keybindings screenshot-window "['<Super>Print']"
-    gsettings get org.gnome.shell.keybindings show-screen-recording-ui ['<Super>R']
-    gsettings set org.gnome.settings-daemon.plugins.media-keys screensaver "['<Primary>Escape']"
+    gsettings set org.gnome.shell.keybindings screenshot "['<Super>p']"
+    gsettings set org.gnome.shell.keybindings screenshot-window "['<Control><Super>p']"
+    gsettings set org.gnome.shell.keybindings show-screen-recording-ui ['<Super>r']
+    gsettings set org.gnome.settings-daemon.plugins.media-keys screensaver "['<Control>Escape']"
     gsettings set org.gnome.desktop.wm.keybindings toggle-maximized "['<Super>Return']"
   #+end_src
 - Nautilus : Préférences > Vues : Trier les dossiers avant les fichiers
@@ -473,10 +475,10 @@ Si la MAJ n'est pas possible (problème d'UEFI), on peut la faire à la main :
   #+begin_src sh
     gsettings set org.gnome.desktop.calendar show-weekdate true
   #+end_src
-# - Disable the sleep button (mapped to Fn+Insert) [doesn't work?]:
-#   #+begin_src sh
-#     gsettings set org.gnome.settings-daemon.plugins.power power-button-action "nothing"
-#   #+end_src
+- Disable the sleep button (mapped to Fn+Insert) :
+  #+begin_src sh
+    gsettings set org.gnome.settings-daemon.plugins.power power-button-action "'nothing'"
+  #+end_src
 - Mode nuit : activé au lever/coucher du soleil ; couleur à niveau 1 (échelle
   0–3) ; note : contrôle également le passage au thème sombre si Night theme
   switcher est également installé /!\ On active au passage les services de
@@ -492,13 +494,13 @@ Si la MAJ n'est pas possible (problème d'UEFI), on peut la faire à la main :
 ** Extensions Gnome
 
 On utilise le Gnome Extension Manager (=gnome-shell-extension-manager=) pour
-installer et gérer des extensions Gnome Shell.
+installer et gérer des extensions Gnome Shell :
 
-[[https://extensions.gnome.org/local/][Liste des extensions]] :
-- [[https://extensions.gnome.org/extension/16/auto-move-windows/][Auto Move Windows]] : Firefox sur (2), Fichiers sur (3)
-- [[https://extensions.gnome.org/extension/904/disconnect-wifi/][Disconnect Wifi]]
+- [[https://extensions.gnome.org/extension/16/auto-move-windows/][Auto Move Windows]] [intégrée] : Firefox sur (2), Fichiers sur (3)
+- [[https://extensions.gnome.org/extension/904/disconnect-wifi/][Disconnect Wifi]] (plus disponible pour GNOME 43)
 - [[https://extensions.gnome.org/extension/28/gtile/][gTile]] : Changer la taille de grille à 4x2,3x2,4x3
-- Night theme switcher : Passe automatiquement du thème clair au thème sombre
+- [[https://github.com/ihpled/mute-unmute][Mute/Unmute]]
+- [[https://extensions.gnome.org/extension/2236/night-theme-switcher/][Night theme switcher]] : Passe automatiquement du thème clair au thème sombre
   selon les horaires du jour. 
 - [[https://extensions.gnome.org/extension/1113/nothing-to-say/][Nothing to say]] : Changer le raccourci pour ~Super+F1~ :
   #+begin_src sh
@@ -508,14 +510,11 @@ installer et gérer des extensions Gnome Shell.
   corrigé avec l'installation de =gnome-icon-theme=.  Dans les paramètres,
   Agencement : mettre au centre, avec un décalage de 1 (pour l'avoir à droite de
   l'heure) ; Emplacements : ajouter « Pignan ».
-- [[https://extensions.gnome.org/extension/1411/quake-mode/][Quake Mode]] : Ajouter Tilix, puis raccourci avec touche au-dessus du Tab
 - [[https://extensions.gnome.org/extension/1133/supertab-launcher/][Super+Tab Launcher]] : L'extension n'est plus mise à jour mais fonctionne encore
   sous Gnome 40. Pour cela, éditer le fichier
   =~/.local/share/gnome-shell/extensions/gnome-shell-extension-super-tab-launcher.dsboger@gmail.com/metadata.json=,
-  et rajouter "40.0", "40.1", "40.2", "40.3", "40.4", "40.5", "42.0", "42.1",
-  "42.2", "42.3", "42.4", "42.5", etc. dans la liste des "shell-version", puis
-  relancer Gnome Shell (=Alt+F2 : r=).
-- Ubuntu AppIndicators [intégrée] : Utiliser une taille d'icone de 20.
+  et rajouter "43" dans la liste des "shell-version". Réouvrir la session. (à terme, devrait être remplacée par [[https://github.com/oxayotl/gnome-shell-extension-alt-tab-launcher][GNOME Shell Extension: Alt+Tab Launcher]])
+- Ubuntu AppIndicator [intégrée] : Utiliser une taille d'icone de 20.
 
 
 * Logiciels spécifiques
@@ -523,6 +522,13 @@ installer et gérer des extensions Gnome Shell.
 ** Web
 
 *** Thunderbird
+
+Nettoyage des locales :
+
+sudo apt purge thunderbird-l10n-* && sudo apt install thunderbird-l10n-en-gb thunderbird-l10n-fr
+
+Le dossier de profile se trouve dans =~/.thunderbird/XXX.default-default=.
+
 
 **** Configuration
 
@@ -587,11 +593,11 @@ Puis le configurer dans =about:config= :
 Redémarrer Thunderbird.
 
 Pour les mises-à-jour, on va dans le dossier de profile Thunderbird
-(=~/.thunderbird/XXX.default-release=), sous-dossier
+(=~/.thunderbird/XXX.default-default=), sous-dossier
 =chrome/thunderbird-gnome-theme=, puis on met à jour le dépôt :
 
 #+begin_src sh
-  git pull origin master
+  git pull origin main
 #+end_src
 
 
@@ -641,23 +647,22 @@ l'enregistrement de l'événement, une invitation est envoyée par e-mail (du ty
 *** Firefox
 
 - Se connecter à Firefox Sync avec un profil vierge : cela synchronisera les
-  marques-page, mots de passe, historique, extensions et préférences.
-- Dans les Paramètres > Général > Onglets, décocher « Ctrl+Tab fait défiler vos
-  onglets en les classant selon leur dernière utilisation ».
+  marques-page, mots de passe, historique, extensions et préférences. Attention, certains extensions ne sont pas ajoutées ou correctement configurées, et demandent un peu de manipulation manuelle (liste ci-dessous). Cela peut aussi prendre un peu de temps avant que tout ne soit fonctionnel…
 - Pas de délai dans la popup des pièces jointes : ouvrir l'éditeur de
   configuration (about:config) :
   #+begin_quote
 : security.dialog_enable_delay: 0
   #+end_quote
+- Utilisation de Pocket pour sauvegarder des liens à lire pour plus tard. (en cours de test)
 
 **** [[https://github.com/rafaelmardojai/firefox-gnome-theme][Thème GNOME]]
 
 Télécharger le thème :
 
 #+begin_src sh
-  cd Ubuntu/Firefox
+  cd Firefox
   git clone https://github.com/rafaelmardojai/firefox-gnome-theme/ && cd firefox-gnome-theme
-  ./scripts/install.sh -f ~/snap/firefox/common/.mozilla/firefox
+  ./scripts/install.sh -f ~/.mozilla/firefox
 #+end_src
 
 Puis le configurer dans =about:config= :
@@ -670,7 +675,7 @@ Puis le configurer dans =about:config= :
 #+end_quote
 
 Redémarrer Firefox. Pour coller au visuel Gnome global, on ajoute le bouton de
-nouvel onglet à gauche et celui du panneau latéral à droite.
+nouvel onglet à gauche et celui du panneau latéral à droite ainsi que celui des extensions, puis on enlève le bouton d'accueil Firefox à gauche des onglets. On rajoutera ensuite les extensions liées aux sites visités directement à droite de la barre d'adresse (par exemple Pocket ou Bitwarden).
 
 Pour les mises-à-jour, on va dans le dossier de profile Firefox
 (=~/snap/firefox/common/.mozilla/firefox/XXX.default=), sous-dossier
@@ -681,12 +686,18 @@ Pour les mises-à-jour, on va dans le dossier de profile Firefox
 #+end_src
 
 
+**** Langues :
+
+Il y a un grand nombre de langues disponibles pour la correction orthographique.
+
+???
+
+sudo apt purge firefox-esr-l10n-* && sudo apt install firefox-esr-l10n-en-gb firefox-esr-l10n-fr 
+
+Check all files in: /usr/lib/firefox-esr/browser/extensions/langpack-
+
+
 **** Extensions :
-
-*Correction orthographique :*
-
-- [[https://addons.mozilla.org/fr/firefox/addon/dictionnaire-fran%C3%A7ais1/][Dictionnaire français]] : Dictionnaire orthographique pour la langue française
-  (requis à cause du confinement du snap).
 
 *Vie privée :*
 
@@ -697,8 +708,6 @@ Pour les mises-à-jour, on va dans le dossier de profile Firefox
   que vous voulez.
 - Decentraleyes : Protège du pistage lié aux diffuseurs de contenus
   « gratuits », centralisés.
-- HTTPS Everywhere : Chiffrez la Toile ! Utilisez automatiquement la sécurité
-  HTTPS avec de nombreux sites.
 - Privacy Badger : Privacy Badger apprend automatiquement à bloquer les
   traqueurs invisibles.
 - Search Engine Ad Remover : Removes ads when searching using Google, Bing,
@@ -709,17 +718,14 @@ Pour les mises-à-jour, on va dans le dossier de profile Firefox
 
 - Bitwarden : Un gestionnaire de mots de passe sécurisé et gratuit pour tous vos
   appareils.
+- Easy Youtube Video Downloader Express
 - Flagfox : Affiche un drapeau selon la localisation du serveur courant
-- Firefox Multi-Account Containers
 - I still don't care about cookies : Get rid of cookie warnings from almost all
   websites! (community version of I don't care about cookies)
 - Intégration à GNOME Shell : Cette extension permet l'intégration à GNOME Shell
   et aux extensions correspondantes du dépôt https://extensions.gnome.org
 - Nuke Anything : Permet la suppression de n'importe quel element de la page via
   le menu contextuel.
-- Sci-Hub X Now! : Free access to academic papers with just a single click via
-  sci-hub!
-- Simple Tab Groups
 - Textarea Cache : Allows to save automatically the content in a text input
   field. Régler "auto clear old cache" sur 15 jours.
 
@@ -730,11 +736,13 @@ Pour les mises-à-jour, on va dans le dossier de profile Firefox
 
 *Désactivées :*
 
+- Firefox Multi-Account Containers
+- Simple Tab Groups
 - User-Agent Switcher and Manager : Spoof websites trying to gather information
   about your web navigation to deliver distinct content you may not want
 - Video DownloadHelper : Download Videos from the Web
 
-Conserver uniquement Bitwarden dans la barre des outils.
+Conserver uniquement Bitwarden et Simple Tab Groups dans la barre des outils.
 
 
 **** Moteurs de recherche
@@ -749,8 +757,7 @@ Voici la liste que je conserve :
 - Google [par défaut ; mot-clé @google]
 - Wikipedia (fr) [mot-clé : @wp]
 - Wikipedia (en) [installé ; mot-clé : @wpen]
-- [[https://packages.ubuntu.com/search?keywords=test&searchon=names&suite=all&section=all][Packages Ubuntu]] [installé directement via le formulaire de recherche de la
-  page, mot-clé : @ubuntu]
+- [[https://mycroftproject.com/install.html?id=19956&basename=all-debian-packages&icontype=ico&name=Debian+Packages+-+Names+%28All%29][Paquets Debian]] : Ajouter le moteur Debian Packages - Names (All)
 
 
 *** Navigateurs alternatifs
@@ -770,6 +777,21 @@ monochrome ».
 Le paquet =nautilus-nextcloud= assure une intégration complète dans Nautilus
 (icônes de synchronisation, lien de partage, partage avec d'autres utilisateurs,
 …).
+
+
+*** Zoom
+
+Zoom est disponible en =flatpak=, avec l'avantage de mises-à-jour gérées par le système, mais deux inconvénients : la lourdeur de l'installation (toutes les librairies sont téléchargées dans un espace dédié à Zoom) et le fait que le 'systray' (la zone des icones en haut à droite) est mal géré (Zoom n'y reste pas quand on ferme l'application). On utilise donc le =.deb= officiel de Zoom à la place, avec l'inconvénient de devoir le mettre à jour manuellement régulièrement.
+
+On le télécharge sur le [[https://zoom.us/download?os=linux][site de Zoom]] (version 5.16.5-303 au 28/10/2023), puis on l'installe avec :
+
+#+begin_src sh
+sudo apt install ./Zoom/zoom_amd64_5.16.5-303
+#+end_src
+
+Pour passer Zoom en français, il suffit de cliquer sur l'icone Zoom, puis "Switch language" et choisir Français. Si il y a un problème de connexion automatique au démarrage, simplement supprimer le dossier =~/.zoom/= peut régler le problème.
+
+Note : impossible en l'état de changer l'icone du systray, pour le passer en monochrome (il est intégré dans le binaire Zoom). 
 
 
 *** GFTP
@@ -816,6 +838,7 @@ LibreOffice > Affichage).
 *** QOwnNotes
 
 (check Iotas et Joplin)
+https://r4ven.fr/blog/joplin-nextcloud-sync-limited-sharing-webdav/
 
 QOwnNotes permet de gérer des notes au format Markdown ; avantage non
 négligeable, il permet de travailler sur des notes synchronisées via
